  *    not break communications with the host by exceeding the maximum control request stage timeout period
  *  - Changed the signature of the CALLBACK_USB_GetDescriptor() callback function so that the descriptor pointer is const, to remove
  *    the need for extra casting inside the callback (thanks to Jonathan Kollasch)
  *
  *  <b>Fixed:</b>
  *  - Fixed USB_GetHIDReportItemInfo() function modifying the given report item's data when the report item does not exist
  *    within the supplied report of a multiple report HID device
  *  - Fixed MassStorage based demos and projects resetting the SCSI sense values before the command is executed, leading to
  *    missed SCSI sense values when the host retrieves the sense key (thanks to Martin Degelsegger)
  *  - Fixed critical pipe/endpoint memory allocation issue where the bank memory address space could be silently overlapped
  *    in the USB controller if the endpoints or pipes were allocated in anything other than ascending order (thanks to Martin Degelsegger)
  *  - Fixed USBtoSerial and Benito project SetLineEncoding calls failing if the USART is busy, due to the RX ISR delaying the control
  *    request handler
  *  - Fixed LowLevel PrinterHost demo not sending control requests to the attached printer with the correct printer interface wIndex value
  *
  *  \section Sec_ChangeLog100807 Version 100807
  *  <b>New:</b>
  *  - Added new ADC_DisableChannel() function (thanks to Mich Davis)
  *  - Added new VTARGET_REF_VOLTS and VTARGET_SCALE_FACTOR compile time defines to the AVRISP-MKII programmer project to set
  *    the VTARGET reference voltage and scale factor
  *  - Added new pgm_read_ptr() macro to Common.h for reading of pointers out of flash memory space
  *  - Added new SWAPENDIAN_16() and SWAPENDIAN_32() macros to Common.h for statically initialized variables at compile time